mac github blog 시작하기 작성중

--- a/_posts/2023-01-25-test-post.md
+++ b/_posts/2023-01-25-test-post.md
@@ -1,9 +1,17 @@
 ---
-title: "github blog test 포스팅"
-excerpt: "이건 뭐임?"
-categorise:
-    - BlogCate
-tags:
-    - BlogTag
+title: "mac github blog 시작하기"
 ---
-여기가 본문??
+# 목차
+- [목차](#목차)
+- [github repository 생성](#github-repository-생성)
+- [jekyll 설정](#jekyll-설정)
+- [포스팅하기](#포스팅하기)
+
+# github repository 생성
+github repository 생성하는 방법
+
+# jekyll 설정
+jekyll 설정하는 방법
+
+# 포스팅하기
+포스팅하는 방법
