posting coding test study

--- a/_posts/2023-02-02-coding-test-01.md
+++ b/_posts/2023-02-02-coding-test-01.md
@@ -13,7 +13,7 @@ toc_sticky: true
 - 0은 짝수입니다.
 
 ## 풀이
-```JAVA
+```java
 class Solution {
     public String solution(int num) {
         String answer = "";
