--- a/_posts/2023-02-02-coding-test-02.md
+++ b/_posts/2023-02-02-coding-test-02.md
@@ -12,7 +12,7 @@ toc_sticky: true
 - `n`은 0 이상 3000이하인 정수입니다.
 
 ## 풀이
-```JAVA
+```java
 class Solution {
     public int solution(int n) {
         int answer = 0;
