posting coding test study

--- a/_posts/2023-02-02-coding-test-01.md
+++ b/_posts/2023-02-02-coding-test-01.md
@@ -18,7 +18,7 @@ class Solution {
     public String solution(int num) {
         String answer = "";
         
-        if (num % 2 == 0) {
+        if (num % 2 == 0) { // num을 2로 나누었을 때, 나머지가 0이면 num은 짝수입니다.
             answer = "Even";
         } else {
             answer = "Odd";
