--- a/_posts/2023-02-02-coding-test-02.md
+++ b/_posts/2023-02-02-coding-test-02.md
@@ -18,7 +18,7 @@ class Solution {
         int answer = 0;
 
         for (int i = 1; i <= n; i++) {
-            if (n % i == 0) {
+            if (n % i == 0) { // n을 i로 나누었을 때, 나머지가 0이면 i는 약수입니다.
                 answer += i;
             }
         }
