posting coding test study

--- a/_posts/2023-02-09-coding-test-05.md
+++ b/_posts/2023-02-09-coding-test-05.md
@@ -18,13 +18,13 @@ import java.util.Arrays;
 
 class Solution {
     public int[] solution(int[] arr) {
-        if (arr.length == 1) {
+        if (arr.length == 1) { // 값이 1개이면 [-1] 반환
             int[] answer = {-1};
             return answer;
         }
         
         int min = 0;
-        for (int i = 0; i < arr.length; i++) {
+        for (int i = 0; i < arr.length; i++) { // arr 배열에서 가장 작은 값 찾기
             if (i == 0) {
                 min = arr[i];
             } else if (min > arr[i]){
@@ -35,7 +35,7 @@ class Solution {
         int finalMin = min;
         int[] answer = Arrays.stream(arr)
                 .filter(element -> element != finalMin)
-                .toArray();
+                .toArray(); // 가장 작은 값을 제외한 값들로 배열 생성
 
         return answer;
     }
