posting coding test study

--- a/_posts/2023-02-09-coding-test-02.md
+++ b/_posts/2023-02-09-coding-test-02.md
@@ -19,7 +19,7 @@ import java.util.Arrays;
 
 class Solution {
     public String solution(String[] seoul) {
-        int x = Arrays.asList(seoul).indexOf("Kim");
+        int x = Arrays.asList(seoul).indexOf("Kim"); // ArrayList로 변환 후 인덱스 찾기
         String answer = "김서방은 " + x + "에 있다";
         return answer;
     }
