posting coding test study

--- a/_posts/2023-02-07-coding-test-11.md
+++ b/_posts/2023-02-07-coding-test-11.md
@@ -1,29 +1,27 @@
 ---
-title: "프로그래머스 하샤드 수 JAVA 풀이"
+title: "프로그래머스 나머지가 1이 되는 수 찾기 JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 하샤드 수 JAVA 풀이"
+toc_label: "프로그래머스 나머지가 1이 되는 수 찾기 JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-양의 정수 x가 하샤드 수이려면 x의 자릿수의 합으로 x가 나누어져야 합니다. 예를 들어 18의 자릿수 합은 1+8=9이고, 18은 9로 나누어 떨어지므로 18은 하샤드 수입니다. 자연수 x를 입력받아 x가 하샤드 수인지 아닌지 검사하는 함수, solution을 완성해주세요.
+자연수 n이 매개변수로 주어집니다. n을 x로 나눈 나머지가 1이 되도록 하는 가장 작은 자연수 x를 return 하도록 solution 함수를 완성해주세요. 답이 항상 존재함은 증명될 수 있습니다.
 
 ## 제한 조건
-- x는 1 이상, 10000 이하인 정수입니다.
+- 3 ≤ n ≤ 1,000,000
 
 ## 풀이
 ```java
 class Solution {
-    public boolean solution(int x) {
-        boolean answer = true;
-        String intToString = String.valueOf(x); // 입력 받은 정수를 문자열로 변환
-        String[] strings = intToString.split(""); // 문자열을 한자리씩 분리
-        int sum = 0;
-        for (String currentString : strings) {
-            sum += Integer.parseInt(currentString); // 자릿수 합
-        }
-        if (x % sum != 0) {
-            answer = false;
+    public int solution(int n) {
+        int answer = 0;
+        boolean loop = true;
+        while (loop) {
+            answer++;
+            if (n % answer == 1) {
+                loop = false;
+            }
         }
         return answer;
     }
