--- a/_posts/2023-02-07-coding-test-12.md
+++ b/_posts/2023-02-07-coding-test-12.md
@@ -1,27 +1,28 @@
 ---
-title: "프로그래머스 나머지가 1이 되는 수 찾기 JAVA 풀이"
+title: "프로그래머스 정수 제곱근 판별 JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 나머지가 1이 되는 수 찾기 JAVA 풀이"
+toc_label: "프로그래머스 정수 제곱근 판별 JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-자연수 n이 매개변수로 주어집니다. n을 x로 나눈 나머지가 1이 되도록 하는 가장 작은 자연수 x를 return 하도록 solution 함수를 완성해주세요. 답이 항상 존재함은 증명될 수 있습니다.
+임의의 양의 정수 n에 대해, n이 어떤 양의 정수 x의 제곱인지 아닌지 판단하려 합니다.
+n이 양의 정수 x의 제곱이라면 x+1의 제곱을 리턴하고, n이 양의 정수 x의 제곱이 아니라면 -1을 리턴하는 함수를 완성하세요.
 
 ## 제한 조건
-- 3 ≤ n ≤ 1,000,000
+- n은 1이상, 50000000000000 이하인 양의 정수입니다.
 
 ## 풀이
 ```java
 class Solution {
-    public int solution(int n) {
-        int answer = 0;
-        boolean loop = true;
-        while (loop) {
-            answer++;
-            if (n % answer == 1) {
-                loop = false;
-            }
+    public long solution(long n) {
+        long answer = 0;
+        double sqrt = Math.sqrt(n); // 제곱근 구하기
+        if ((sqrt * 10) % 10 == 0) { // 제곱근이 양의 정수일 경우
+            long temp = Double.valueOf(sqrt).longValue() + 1;
+            answer = temp * temp;
+        } else { // 제곱근이 양의 정수가 아닐 경우
+            answer = -1;
         }
         return answer;
     }
