--- a/_posts/2023-02-07-coding-test-13.md
+++ b/_posts/2023-02-07-coding-test-13.md
@@ -1,29 +1,43 @@
 ---
-title: "프로그래머스 정수 제곱근 판별 JAVA 풀이"
+title: "프로그래머스 두 정수 사이의 합 JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 정수 제곱근 판별 JAVA 풀이"
+toc_label: "프로그래머스 두 정수 사이의 합 JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-임의의 양의 정수 n에 대해, n이 어떤 양의 정수 x의 제곱인지 아닌지 판단하려 합니다.
-n이 양의 정수 x의 제곱이라면 x+1의 제곱을 리턴하고, n이 양의 정수 x의 제곱이 아니라면 -1을 리턴하는 함수를 완성하세요.
+두 정수 a, b가 주어졌을 때 a와 b 사이에 속한 모든 정수의 합을 리턴하는 함수, solution을 완성하세요.
+예를 들어 a = 3, b = 5인 경우, 3 + 4 + 5 = 12이므로 12를 리턴합니다.
 
 ## 제한 조건
-- n은 1이상, 50000000000000 이하인 양의 정수입니다.
+- a와 b가 같은 경우는 둘 중 아무 수나 리턴하세요.
+- a와 b는 -10,000,000 이상 10,000,000 이하인 정수입니다.
+- a와 b의 대소관계는 정해져있지 않습니다.
 
 ## 풀이
 ```java
 class Solution {
-    public long solution(long n) {
+    public long solution(int a, int b) {
         long answer = 0;
-        double sqrt = Math.sqrt(n); // 제곱근 구하기
-        if ((sqrt * 10) % 10 == 0) { // 제곱근이 양의 정수일 경우
-            long temp = Double.valueOf(sqrt).longValue() + 1;
-            answer = temp * temp;
-        } else { // 제곱근이 양의 정수가 아닐 경우
-            answer = -1;
+        int min = 0;
+        int max = 0;
+
+        if (a == b) {
+            return a;
         }
+
+        if (a < b) {
+            min = a;
+            max = b;
+        } else {
+            min = b;
+            max = a;
+        }
+
+        for (int i = min; i <= max; i++) {
+            answer += i;
+        }
+
         return answer;
     }
 }
