--- a/_posts/2023-02-09-coding-test-21.md
+++ b/_posts/2023-02-09-coding-test-21.md
@@ -1,34 +1,30 @@
 ---
-title: "프로그래머스 없는 숫자 더하기 JAVA 풀이"
+title: "프로그래머스 가운데 글자 가져오기 JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 없는 숫자 더하기 JAVA 풀이"
+toc_label: "프로그래머스 가운데 글자 가져오기 JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-0부터 9까지의 숫자 중 일부가 들어있는 정수 배열 numbers가 매개변수로 주어집니다. numbers에서 찾을 수 없는 0부터 9까지의 숫자를 모두 찾아 더한 수를 return 하도록 solution 함수를 완성해주세요.
+단어 s의 가운데 글자를 반환하는 함수, solution을 만들어 보세요. 단어의 길이가 짝수라면 가운데 두글자를 반환하면 됩니다.
 
 ## 제한 조건
-- 1 ≤ numbers의 길이 ≤ 9
-  - 0 ≤ numbers의 모든 원소 ≤ 9
-  - numbers의 모든 원소는 서로 다릅니다.
-
+- s는 길이가 1 이상, 100이하인 스트링입니다.
 
 ## 풀이
 ```java
 class Solution {
-    public int solution(int[] numbers) {
-        int sum = 0;
-        for (int i = 0; i < 10; i++) {
-            sum += i;
+    public String solution(String s) {
+        String answer = "";
+        int length = s.length();
+        if (length % 2 == 0) {
+            int i = length / 2;
+            answer += s.charAt(i - 1);
+            answer += s.charAt(i);
+        } else {
+            int i = length / 2;
+            answer += s.charAt(i);
         }
-
-        int arrSum = 0;
-        for (int number :
-                numbers) {
-            arrSum += number;
-        }
-        int answer = sum - arrSum;
         return answer;
     }
 }
