--- a/_posts/2023-02-10-coding-test-27.md
+++ b/_posts/2023-02-10-coding-test-27.md
@@ -1,34 +1,37 @@
 ---
-title: "프로그래머스 문자열 다루기 기본 JAVA 풀이"
+title: "프로그래머스 부족한 금액 계산하기 JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 문자열 다루기 기본 JAVA 풀이"
+toc_label: "프로그래머스 부족한 금액 계산하기 JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-문자열 s의 길이가 4 혹은 6이고, 숫자로만 구성돼있는지 확인해주는 함수, solution을 완성하세요. 예를 들어 s가 "a234"이면 False를 리턴하고 "1234"라면 True를 리턴하면 됩니다.
+새로 생긴 놀이기구는 인기가 매우 많아 줄이 끊이질 않습니다. 이 놀이기구의 원래 이용료는 price원 인데, 놀이기구를 N 번 째 이용한다면 원래 이용료의 N배를 받기로 하였습니다. 즉, 처음 이용료가 100이었다면 2번째에는 200, 3번째에는 300으로 요금이 인상됩니다.
+놀이기구를 count번 타게 되면 현재 자신이 가지고 있는 금액에서 얼마가 모자라는지를 return 하도록 solution 함수를 완성하세요.
+단, 금액이 부족하지 않으면 0을 return 하세요.
 
 ## 제한 조건
-- s는 길이 1 이상, 길이 8 이하인 문자열입니다.
-- s는 영문 알파벳 대소문자 또는 0부터 9까지 숫자로 이루어져 있습니다.
+- 놀이기구의 이용료 price : 1 ≤ price ≤ 2,500, price는 자연수
+- 처음 가지고 있던 금액 money : 1 ≤ money ≤ 1,000,000,000, money는 자연수
+- 놀이기구의 이용 횟수 count : 1 ≤ count ≤ 2,500, count는 자연수
 
 ## 풀이
 ```java
 class Solution {
-    public boolean solution(String s) {
-        boolean answer = true;
-
-        int length = s.length();
-        if (length != 4 && length != 6) {
-            return false;
+    public long solution(int price, int money, int count) {
+        long answer = 0;
+        long myMoney = money;
+        for (int i = 1; i <= count; i++) {
+            int curPrice = price * i;
+            myMoney -= curPrice;
         }
 
-        for (int i = 0; i < length; i++) {
-            int c = s.charAt(i);
-            if (c > 57) { // 아스키코드로 확인
-                answer = false;
-            }
+        if (myMoney < 0) {
+            answer = myMoney * -1;
+        } else {
+            answer = 0;
         }
+
         return answer;
     }
 }
