--- a/_posts/2023-02-07-coding-test-08.md
+++ b/_posts/2023-02-07-coding-test-08.md
@@ -1,29 +1,25 @@
 ---
-title: "프로그래머스 x만큼 간격이 있는 n개의 숫자 JAVA 풀이"
+title: "프로그래머스 문자열을 정수로 바꾸기 JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 x만큼 간격이 있는 n개의 숫자 JAVA 풀이"
+toc_label: "프로그래머스 문자열을 정수로 바꾸기 JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-함수 solution은 정수 x와 자연수 n을 입력 받아, x부터 시작해 x씩 증가하는 숫자를 n개 지니는 리스트를 리턴해야 합니다. 다음 제한 조건을 보고, 조건을 만족하는 함수, solution을 완성해주세요.
+문자열 s를 숫자로 변환한 결과를 반환하는 함수, solution을 완성하세요.
 
 ## 제한 조건
-- x는 -10000000 이상, 10000000 이하인 정수입니다.
-- n은 1000 이하인 자연수입니다.
+- s의 길이는 1 이상 5이하입니다.
+- s의 맨앞에는 부호(+, -)가 올 수 있습니다.
+- s는 부호와 숫자로만 이루어져있습니다.
+- s는 "0"으로 시작하지 않습니다.
 
 ## 풀이
 ```java
 class Solution {
-    public long[] solution(int x, int n) {
-        long[] answer = new long[n];
-        long sum = 0;
-
-        for (int i = 0; i < n; i++) {
-            sum += x;
-            answer[i] = sum;
-        }
-
+    public int solution(String s) {
+        int answer = 0;
+        answer = Integer.parseInt(s);
         return answer;
     }
 }
