--- a/_posts/2023-02-07-coding-test-09.md
+++ b/_posts/2023-02-07-coding-test-09.md
@@ -1,25 +1,32 @@
 ---
-title: "프로그래머스 문자열을 정수로 바꾸기 JAVA 풀이"
+title: "프로그래머스 정수 내림차순으로 배치하기 JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 문자열을 정수로 바꾸기 JAVA 풀이"
+toc_label: "프로그래머스 정수 내림차순으로 배치하기 JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-문자열 s를 숫자로 변환한 결과를 반환하는 함수, solution을 완성하세요.
+함수 solution은 정수 n을 매개변수로 입력받습니다. n의 각 자릿수를 큰것부터 작은 순으로 정렬한 새로운 정수를 리턴해주세요. 예를들어 n이 118372면 873211을 리턴하면 됩니다.
 
 ## 제한 조건
-- s의 길이는 1 이상 5이하입니다.
-- s의 맨앞에는 부호(+, -)가 올 수 있습니다.
-- s는 부호와 숫자로만 이루어져있습니다.
-- s는 "0"으로 시작하지 않습니다.
+- n은 1이상 8000000000 이하인 자연수입니다.
 
 ## 풀이
 ```java
+import java.util.Arrays;
+import java.util.Collections;
+
 class Solution {
-    public int solution(String s) {
-        int answer = 0;
-        answer = Integer.parseInt(s);
+    public long solution(long n) {
+        long answer = 0;
+        String longToString = String.valueOf(n); // 입력 받은 정수를 문자열로 변환
+        String[] stringToArray = longToString.split(""); // 문자열을 배열로 변환
+        Arrays.sort(stringToArray, Collections.reverseOrder()); // 내림차순으로 배열 정렬
+        String arrayToString = "";
+        for (String c : stringToArray) {
+            arrayToString += c; // 배열을 문자열로 변환
+        }
+        answer = Long.parseLong(arrayToString); // 문자열을 Long으로 변환
         return answer;
     }
 }
