--- a/_posts/2023-02-09-coding-test-16.md
+++ b/_posts/2023-02-09-coding-test-16.md
@@ -1,26 +1,42 @@
 ---
-title: "프로그래머스 서울에서 김서방 찾기 JAVA 풀이"
+title: "프로그래머스 나누어 떨어지는 숫자 배열 JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 서울에서 김서방 찾기 JAVA 풀이"
+toc_label: "프로그래머스 나누어 떨어지는 숫자 배열 JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-String형 배열 seoul의 element중 "Kim"의 위치 x를 찾아, "김서방은 x에 있다"는 String을 반환하는 함수, solution을 완성하세요. seoul에 "Kim"은 오직 한 번만 나타나며 잘못된 값이 입력되는 경우는 없습니다.
+array의 각 element 중 divisor로 나누어 떨어지는 값을 오름차순으로 정렬한 배열을 반환하는 함수, solution을 작성해주세요.
+divisor로 나누어 떨어지는 element가 하나도 없다면 배열에 -1을 담아 반환하세요.
 
 ## 제한 조건
-- seoul은 길이 1 이상, 1000 이하인 배열입니다.
-- seoul의 원소는 길이 1 이상, 20 이하인 문자열입니다.
-- "Kim"은 반드시 seoul 안에 포함되어 있습니다.
+- arr은 자연수를 담은 배열입니다.
+- 정수 i, j에 대해 i ≠ j 이면 arr[i] ≠ arr[j] 입니다.
+- divisor는 자연수입니다.
+- array는 길이 1 이상인 배열입니다.
 
 ## 풀이
 ```java
+import java.util.ArrayList;
 import java.util.Arrays;
 
 class Solution {
-    public String solution(String[] seoul) {
-        int x = Arrays.asList(seoul).indexOf("Kim"); // ArrayList로 변환 후 인덱스 찾기
-        String answer = "김서방은 " + x + "에 있다";
+    public int[] solution(int[] arr, int divisor) {
+        ArrayList<Integer> integers = new ArrayList<>(); // divisor로 나눈 결과를 담을 ArrayList
+        
+        for (int element : arr) {
+            if (element % divisor == 0) {
+                integers.add(element);
+            }
+        }
+
+        if (integers.size() == 0) {
+            integers.add(-1);
+        }
+
+        int[] answer = integers.stream().mapToInt(Integer::intValue).toArray(); // ArrayList to Array
+        Arrays.sort(answer);
+        
         return answer;
     }
 }
