--- a/_posts/2023-02-09-coding-test-17.md
+++ b/_posts/2023-02-09-coding-test-17.md
@@ -1,42 +1,30 @@
 ---
-title: "프로그래머스 나누어 떨어지는 숫자 배열 JAVA 풀이"
+title: "프로그래머스 핸드폰 번호 가리기 JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 나누어 떨어지는 숫자 배열 JAVA 풀이"
+toc_label: "프로그래머스 핸드폰 번호 가리기 JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-array의 각 element 중 divisor로 나누어 떨어지는 값을 오름차순으로 정렬한 배열을 반환하는 함수, solution을 작성해주세요.
-divisor로 나누어 떨어지는 element가 하나도 없다면 배열에 -1을 담아 반환하세요.
+프로그래머스 모바일은 개인정보 보호를 위해 고지서를 보낼 때 고객들의 전화번호의 일부를 가립니다.
+전화번호가 문자열 phone_number로 주어졌을 때, 전화번호의 뒷 4자리를 제외한 나머지 숫자를 전부 *으로 가린 문자열을 리턴하는 함수, solution을 완성해주세요.
 
 ## 제한 조건
-- arr은 자연수를 담은 배열입니다.
-- 정수 i, j에 대해 i ≠ j 이면 arr[i] ≠ arr[j] 입니다.
-- divisor는 자연수입니다.
-- array는 길이 1 이상인 배열입니다.
+- phone_number는 길이 4 이상, 20이하인 문자열입니다.
 
 ## 풀이
 ```java
-import java.util.ArrayList;
-import java.util.Arrays;
-
 class Solution {
-    public int[] solution(int[] arr, int divisor) {
-        ArrayList<Integer> integers = new ArrayList<>(); // divisor로 나눈 결과를 담을 ArrayList
-        
-        for (int element : arr) {
-            if (element % divisor == 0) {
-                integers.add(element);
+    public String solution(String phone_number) {
+        String answer = "";
+        int length = phone_number.length();
+        for (int i = 0; i < length; i++) {
+            if (i < length - 4) {
+                answer += "*";
+            } else {
+                answer += phone_number.charAt(i);
             }
         }
-
-        if (integers.size() == 0) {
-            integers.add(-1);
-        }
-
-        int[] answer = integers.stream().mapToInt(Integer::intValue).toArray(); // ArrayList to Array
-        Arrays.sort(answer);
-        
         return answer;
     }
 }
