--- a/_posts/2023-02-09-coding-test-18.md
+++ b/_posts/2023-02-09-coding-test-18.md
@@ -1,30 +1,42 @@
 ---
-title: "프로그래머스 핸드폰 번호 가리기 JAVA 풀이"
+title: "프로그래머스 제일 작은 수 제거하기 JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 핸드폰 번호 가리기 JAVA 풀이"
+toc_label: "프로그래머스 제일 작은 수 제거하기 JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-프로그래머스 모바일은 개인정보 보호를 위해 고지서를 보낼 때 고객들의 전화번호의 일부를 가립니다.
-전화번호가 문자열 phone_number로 주어졌을 때, 전화번호의 뒷 4자리를 제외한 나머지 숫자를 전부 *으로 가린 문자열을 리턴하는 함수, solution을 완성해주세요.
+정수를 저장한 배열, arr 에서 가장 작은 수를 제거한 배열을 리턴하는 함수, solution을 완성해주세요. 단, 리턴하려는 배열이 빈 배열인 경우엔 배열에 -1을 채워 리턴하세요. 예를들어 arr이 [4,3,2,1]인 경우는 [4,3,2]를 리턴 하고, [10]면 [-1]을 리턴 합니다.
 
 ## 제한 조건
-- phone_number는 길이 4 이상, 20이하인 문자열입니다.
+- arr은 길이 1 이상인 배열입니다.
+- 인덱스 i, j에 대해 i ≠ j이면 arr[i] ≠ arr[j] 입니다.
 
 ## 풀이
 ```java
+import java.util.Arrays;
+
 class Solution {
-    public String solution(String phone_number) {
-        String answer = "";
-        int length = phone_number.length();
-        for (int i = 0; i < length; i++) {
-            if (i < length - 4) {
-                answer += "*";
-            } else {
-                answer += phone_number.charAt(i);
+    public int[] solution(int[] arr) {
+        if (arr.length == 1) { // 값이 1개이면 [-1] 반환
+            int[] answer = {-1};
+            return answer;
+        }
+        
+        int min = 0;
+        for (int i = 0; i < arr.length; i++) { // arr 배열에서 가장 작은 값 찾기
+            if (i == 0) {
+                min = arr[i];
+            } else if (min > arr[i]){
+                min = arr[i];
             }
         }
+
+        int finalMin = min;
+        int[] answer = Arrays.stream(arr)
+                .filter(element -> element != finalMin)
+                .toArray(); // 가장 작은 값을 제외한 값들로 배열 생성
+
         return answer;
     }
 }
