--- a/_posts/2023-02-09-coding-test-19.md
+++ b/_posts/2023-02-09-coding-test-19.md
@@ -1,42 +1,32 @@
 ---
-title: "프로그래머스 제일 작은 수 제거하기 JAVA 풀이"
+title: "프로그래머스 음양 더하기 JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 제일 작은 수 제거하기 JAVA 풀이"
+toc_label: "프로그래머스 음양 더하기 JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-정수를 저장한 배열, arr 에서 가장 작은 수를 제거한 배열을 리턴하는 함수, solution을 완성해주세요. 단, 리턴하려는 배열이 빈 배열인 경우엔 배열에 -1을 채워 리턴하세요. 예를들어 arr이 [4,3,2,1]인 경우는 [4,3,2]를 리턴 하고, [10]면 [-1]을 리턴 합니다.
+어떤 정수들이 있습니다. 이 정수들의 절댓값을 차례대로 담은 정수 배열 absolutes와 이 정수들의 부호를 차례대로 담은 불리언 배열 signs가 매개변수로 주어집니다. 실제 정수들의 합을 구하여 return 하도록 solution 함수를 완성해주세요.
 
 ## 제한 조건
-- arr은 길이 1 이상인 배열입니다.
-- 인덱스 i, j에 대해 i ≠ j이면 arr[i] ≠ arr[j] 입니다.
+- absolutes의 길이는 1 이상 1,000 이하입니다.
+  - absolutes의 모든 수는 각각 1 이상 1,000 이하입니다.
+- signs의 길이는 absolutes의 길이와 같습니다.
+  - signs[i] 가 참이면 absolutes[i] 의 실제 정수가 양수임을, 그렇지 않으면 음수임을 의미합니다.
 
 ## 풀이
 ```java
-import java.util.Arrays;
-
 class Solution {
-    public int[] solution(int[] arr) {
-        if (arr.length == 1) { // 값이 1개이면 [-1] 반환
-            int[] answer = {-1};
-            return answer;
-        }
-        
-        int min = 0;
-        for (int i = 0; i < arr.length; i++) { // arr 배열에서 가장 작은 값 찾기
-            if (i == 0) {
-                min = arr[i];
-            } else if (min > arr[i]){
-                min = arr[i];
+    public int solution(int[] absolutes, boolean[] signs) {
+        int answer = 0;
+        for (int i = 0; i < absolutes.length; i++) {
+            if (signs[i]) {
+                answer += absolutes[i];
+            } else {
+                answer -= absolutes[i];
             }
+
         }
-
-        int finalMin = min;
-        int[] answer = Arrays.stream(arr)
-                .filter(element -> element != finalMin)
-                .toArray(); // 가장 작은 값을 제외한 값들로 배열 생성
-
         return answer;
     }
 }
