--- a/_posts/2023-02-09-coding-test-20.md
+++ b/_posts/2023-02-09-coding-test-20.md
@@ -1,32 +1,34 @@
 ---
-title: "프로그래머스 음양 더하기 JAVA 풀이"
+title: "프로그래머스 없는 숫자 더하기 JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 음양 더하기 JAVA 풀이"
+toc_label: "프로그래머스 없는 숫자 더하기 JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-어떤 정수들이 있습니다. 이 정수들의 절댓값을 차례대로 담은 정수 배열 absolutes와 이 정수들의 부호를 차례대로 담은 불리언 배열 signs가 매개변수로 주어집니다. 실제 정수들의 합을 구하여 return 하도록 solution 함수를 완성해주세요.
+0부터 9까지의 숫자 중 일부가 들어있는 정수 배열 numbers가 매개변수로 주어집니다. numbers에서 찾을 수 없는 0부터 9까지의 숫자를 모두 찾아 더한 수를 return 하도록 solution 함수를 완성해주세요.
 
 ## 제한 조건
-- absolutes의 길이는 1 이상 1,000 이하입니다.
-  - absolutes의 모든 수는 각각 1 이상 1,000 이하입니다.
-- signs의 길이는 absolutes의 길이와 같습니다.
-  - signs[i] 가 참이면 absolutes[i] 의 실제 정수가 양수임을, 그렇지 않으면 음수임을 의미합니다.
+- 1 ≤ numbers의 길이 ≤ 9
+  - 0 ≤ numbers의 모든 원소 ≤ 9
+  - numbers의 모든 원소는 서로 다릅니다.
+
 
 ## 풀이
 ```java
 class Solution {
-    public int solution(int[] absolutes, boolean[] signs) {
-        int answer = 0;
-        for (int i = 0; i < absolutes.length; i++) {
-            if (signs[i]) {
-                answer += absolutes[i];
-            } else {
-                answer -= absolutes[i];
-            }
-
+    public int solution(int[] numbers) {
+        int sum = 0;
+        for (int i = 0; i < 10; i++) {
+            sum += i;
         }
+
+        int arrSum = 0;
+        for (int number :
+                numbers) {
+            arrSum += number;
+        }
+        int answer = sum - arrSum;
         return answer;
     }
 }
