--- a/_posts/2023-02-09-coding-test-22.md
+++ b/_posts/2023-02-09-coding-test-22.md
@@ -1,29 +1,27 @@
 ---
-title: "프로그래머스 가운데 글자 가져오기 JAVA 풀이"
+title: "프로그래머스 수박수박수박수박수박수? JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 가운데 글자 가져오기 JAVA 풀이"
+toc_label: "프로그래머스 수박수박수박수박수박수? JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-단어 s의 가운데 글자를 반환하는 함수, solution을 만들어 보세요. 단어의 길이가 짝수라면 가운데 두글자를 반환하면 됩니다.
+길이가 n이고, "수박수박수박수...."와 같은 패턴을 유지하는 문자열을 리턴하는 함수, solution을 완성하세요. 예를들어 n이 4이면 "수박수박"을 리턴하고 3이라면 "수박수"를 리턴하면 됩니다.
 
 ## 제한 조건
-- s는 길이가 1 이상, 100이하인 스트링입니다.
+- n은 길이 10,000이하인 자연수입니다.
 
 ## 풀이
 ```java
 class Solution {
-    public String solution(String s) {
+    public String solution(int n) {
         String answer = "";
-        int length = s.length();
-        if (length % 2 == 0) {
-            int i = length / 2;
-            answer += s.charAt(i - 1);
-            answer += s.charAt(i);
-        } else {
-            int i = length / 2;
-            answer += s.charAt(i);
+        for (int i = 0; i < n; i++) {
+            if (i % 2 == 0) {
+                answer += "수";
+            } else {
+                answer += "박";
+            }
         }
         return answer;
     }
