--- a/_posts/2023-02-10-coding-test-25.md
+++ b/_posts/2023-02-10-coding-test-25.md
@@ -1,29 +1,37 @@
 ---
-title: "프로그래머스 문자열 내림차순으로 배치하기 JAVA 풀이"
+title: "프로그래머스 약수의 개수와 덧셈 JAVA 풀이"
 toc: true
-toc_label: "프로그래머스 문자열 내림차순으로 배치하기 JAVA 풀이"
+toc_label: "프로그래머스 약수의 개수와 덧셈 JAVA 풀이"
 toc_icon: "tags"
 toc_sticky: true
 ---
 ## 문제 설명
-문자열 s에 나타나는 문자를 큰것부터 작은 순으로 정렬해 새로운 문자열을 리턴하는 함수, solution을 완성해주세요.
-s는 영문 대소문자로만 구성되어 있으며, 대문자는 소문자보다 작은 것으로 간주합니다.
+두 정수 left와 right가 매개변수로 주어집니다. left부터 right까지의 모든 수들 중에서, 약수의 개수가 짝수인 수는 더하고, 약수의 개수가 홀수인 수는 뺀 수를 return 하도록 solution 함수를 완성해주세요.
 
 ## 제한 조건
-- str은 길이 1 이상인 문자열입니다.
+- 1 ≤ left ≤ right ≤ 1,000
 
 ## 풀이
 ```java
-import java.util.*;
-
 class Solution {
-    public String solution(String s) {
-        String answer = "";
-        String[] split = s.split("");
-        Arrays.sort(split, Collections.reverseOrder());
-        for (String element : split) {
-            answer += element;
+    public int solution(int left, int right) {
+        int answer = 0;
+
+        for (int i = left; i <= right; i++) { // left ~ right 까지 loop
+            int cnt = 0; // 약수의 개수
+            for (int j = 1; j <= i; j++) { // left ~ right 사이의 각 수만큼 loop
+                if (i % j == 0) { // 약수인 경우 개수 세기
+                    cnt++;
+                }
+            }
+
+            if (cnt % 2 == 0) { // 약수의 개수가 짝수인 경우
+                answer += i;
+            } else {
+                answer -= i;
+            }
         }
+
         return answer;
     }
 }
