--- a/_posts/2023-02-03-coding-test-04.md
+++ b/_posts/2023-02-03-coding-test-04.md
@@ -1,5 +1,7 @@
 ---
 title: "프로그래머스 자연수 뒤집어 배열로 만들기 JAVA 풀이"
+categories:
+  - CodingTest
 toc: true
 toc_label: "프로그래머스 자연수 뒤집어 배열로 만들기 JAVA 풀이"
 toc_icon: "tags"
