--- a/_posts/2023-02-07-coding-test-11.md
+++ b/_posts/2023-02-07-coding-test-11.md
@@ -1,5 +1,7 @@
 ---
 title: "프로그래머스 나머지가 1이 되는 수 찾기 JAVA 풀이"
+categories:
+  - CodingTest
 toc: true
 toc_label: "프로그래머스 나머지가 1이 되는 수 찾기 JAVA 풀이"
 toc_icon: "tags"
