--- a/_posts/2023-02-07-coding-test-13.md
+++ b/_posts/2023-02-07-coding-test-13.md
@@ -1,5 +1,7 @@
 ---
 title: "프로그래머스 두 정수 사이의 합 JAVA 풀이"
+categories:
+  - CodingTest
 toc: true
 toc_label: "프로그래머스 두 정수 사이의 합 JAVA 풀이"
 toc_icon: "tags"
