--- a/_posts/2023-02-09-coding-test-17.md
+++ b/_posts/2023-02-09-coding-test-17.md
@@ -1,5 +1,7 @@
 ---
 title: "프로그래머스 핸드폰 번호 가리기 JAVA 풀이"
+categories:
+  - CodingTest
 toc: true
 toc_label: "프로그래머스 핸드폰 번호 가리기 JAVA 풀이"
 toc_icon: "tags"
