--- a/_posts/2023-02-10-coding-test-26.md
+++ b/_posts/2023-02-10-coding-test-26.md
@@ -1,5 +1,7 @@
 ---
 title: "프로그래머스 문자열 다루기 기본 JAVA 풀이"
+categories:
+  - CodingTest
 toc: true
 toc_label: "프로그래머스 문자열 다루기 기본 JAVA 풀이"
 toc_icon: "tags"
