--- a/_posts/2023-02-06-coding-test-06.md
+++ b/_posts/2023-02-06-coding-test-06.md
@@ -1,5 +1,7 @@
 ---
 title: "프로그래머스 문자열 내 p와 y의 개수 JAVA 풀이"
+categories:
+  - CodingTest
 toc: true
 toc_label: "프로그래머스 문자열 내 p와 y의 개수 JAVA 풀이"
 toc_icon: "tags"
