--- a/_posts/2023-02-07-coding-test-07.md
+++ b/_posts/2023-02-07-coding-test-07.md
@@ -1,5 +1,7 @@
 ---
 title: "프로그래머스 x만큼 간격이 있는 n개의 숫자 JAVA 풀이"
+categories:
+  - CodingTest
 toc: true
 toc_label: "프로그래머스 x만큼 간격이 있는 n개의 숫자 JAVA 풀이"
 toc_icon: "tags"
