--- a/_posts/2023-02-07-coding-test-08.md
+++ b/_posts/2023-02-07-coding-test-08.md
@@ -1,5 +1,7 @@
 ---
 title: "프로그래머스 문자열을 정수로 바꾸기 JAVA 풀이"
+categories:
+  - CodingTest
 toc: true
 toc_label: "프로그래머스 문자열을 정수로 바꾸기 JAVA 풀이"
 toc_icon: "tags"
