--- a/_posts/2023-02-07-coding-test-09.md
+++ b/_posts/2023-02-07-coding-test-09.md
@@ -1,5 +1,7 @@
 ---
 title: "프로그래머스 정수 내림차순으로 배치하기 JAVA 풀이"
+categories:
+  - CodingTest
 toc: true
 toc_label: "프로그래머스 정수 내림차순으로 배치하기 JAVA 풀이"
 toc_icon: "tags"
