--- a/_posts/2023-02-09-coding-test-21.md
+++ b/_posts/2023-02-09-coding-test-21.md
@@ -1,5 +1,7 @@
 ---
 title: "프로그래머스 가운데 글자 가져오기 JAVA 풀이"
+categories:
+  - CodingTest
 toc: true
 toc_label: "프로그래머스 가운데 글자 가져오기 JAVA 풀이"
 toc_icon: "tags"
