--- a/_posts/2023-02-10-coding-test-25.md
+++ b/_posts/2023-02-10-coding-test-25.md
@@ -1,5 +1,7 @@
 ---
 title: "프로그래머스 약수의 개수와 덧셈 JAVA 풀이"
+categories:
+  - CodingTest
 toc: true
 toc_label: "프로그래머스 약수의 개수와 덧셈 JAVA 풀이"
 toc_icon: "tags"
