--- a/_posts/2023-02-10-coding-test-27.md
+++ b/_posts/2023-02-10-coding-test-27.md
@@ -1,5 +1,7 @@
 ---
 title: "프로그래머스 부족한 금액 계산하기 JAVA 풀이"
+categories:
+  - CodingTest
 toc: true
 toc_label: "프로그래머스 부족한 금액 계산하기 JAVA 풀이"
 toc_icon: "tags"
