SEO 테스트 + 글 썸네일 추가 테스트

--- a/_posts/2025-10-25-kotlin-01.md
+++ b/_posts/2025-10-25-kotlin-01.md
@@ -1,9 +1,15 @@
 ---
-title: "Kotlin을 사용한 첫 프로그램 [01]"
+title: "Kotlin 입문 [01] - Kotlin을 사용한 첫 프로그램"
+description: "Kotlin을 처음 배우는 입문자를 위한 첫 단계! Kotlin 플레이그라운드를 사용해 Hello World 프로그램을 작성하고 실행하는 방법을 자세히 알아봅니다."
+author: "Giyong Kim"
+date: 2025-10-25
+last_modified_at: 2025-10-26
+image: "/assets/img/kotlin-full-color-logo-on-white-rgb.png"
+lang: "ko"
 categories:
   - Programming
 toc: true
-toc_label: "Kotlin을 사용한 첫 프로그램 [01]"
+toc_label: "Kotlin 입문 [01] - Kotlin을 사용한 첫 프로그램"
 toc_icon: "tags"
 toc_sticky: true
 ---
