--- a/_posts/2025-10-25-kotlin-01.md
+++ b/_posts/2025-10-25-kotlin-01.md
@@ -4,7 +4,8 @@ description: "Kotlin을 처음 배우는 입문자를 위한 첫 단계! Kotlin 
 author: "Giyong Kim"
 date: 2025-10-25
 last_modified_at: 2025-10-26
-image: "/assets/img/kotlin-full-color-logo-on-white-rgb.png"
+header:
+  image: "/assets/img/kotlin-full-color-logo-on-white-rgb.png"
 lang: "ko"
 categories:
   - Programming
