--- a/_posts/2025-10-25-kotlin-01.md
+++ b/_posts/2025-10-25-kotlin-01.md
@@ -5,7 +5,7 @@ author: "Giyong Kim"
 date: 2025-10-25
 last_modified_at: 2025-10-26
 header:
-  image: "/assets/img/kotlin-full-color-logo-on-white-rgb.png"
+  og_image: "/assets/img/kotlin-full-color-logo-on-white-rgb.png"
 lang: "ko"
 categories:
   - Programming
