SEO 최적화 설정 추가

--- a/_posts/2025-10-26-kotlin-02.md
+++ b/_posts/2025-10-26-kotlin-02.md
@@ -1,9 +1,16 @@
 ---
-title: "Kotlin에서 변수 만들기 및 사용하기 [02]"
+title: "Kotlin 입문 [02] - Kotlin에서 변수 만들기 및 사용하기"
+description: "Kotlin 변수와 데이터 유형 완벽 정리! val vs var, 데이터 타입 선택, 문자열 템플릿, 주석 작성법 등 안드로이드 개발자가 꼭 알아야 할 기초 문법을 실습 예제와 함께 학습하세요."
+author: "Giyong Kim"
+date: 2025-10-26
+last_modified_at: 2025-10-27
+header:
+  og_image: "/assets/img/kotlin-full-color-logo-on-white-rgb.png"
+lang: "ko"
 categories:
   - Programming
 toc: true
-toc_label: "Kotlin에서 변수 만들기 및 사용하기 [02]"
+toc_label: "Kotlin 입문 [02] - Kotlin에서 변수 만들기 및 사용하기"
 toc_icon: "tags"
 toc_sticky: true
 ---
