Kotlin에서 클래스 및 객체 사용 description 추가

--- a/_posts/2025-11-01-kotlin-06.md
+++ b/_posts/2025-11-01-kotlin-06.md
@@ -1,6 +1,6 @@
 ---
 title: "Kotlin 입문 [06] - Kotlin에서 클래스 및 객체 사용"
-description: ""
+description: "Kotlin 클래스와 객체의 기본 개념부터 상속, 메서드 재정의, 접근 제어자까지 단계별로 실습을 통해 배워보세요."
 author: "Giyong Kim"
 date: 2025-11-01
 last_modified_at: 2025-11-01
